--- a/package.json
+++ b/package.json
@@ -6,23 +6,31 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@popperjs/core": "^2.9.2",
+    "@react-google-maps/api": "^2.2.0",
     "babel-plugin-styled-components": "^1.12.0",
-    "bootstrap": "^5.0.0-beta3",
+    "bootstrap": "^5.0.1",
     "gatsby": "^3.4.1",
     "gatsby-plugin-gatsby-cloud": "^2.4.1",
+    "gatsby-plugin-google-gtag": "^3.6.0",
     "gatsby-plugin-image": "^1.4.0",
     "gatsby-plugin-manifest": "^3.4.0",
     "gatsby-plugin-offline": "^4.4.0",
+    "gatsby-plugin-page-load-delay": "^0.1.2",
     "gatsby-plugin-react-helmet": "^4.4.0",
     "gatsby-plugin-sharp": "^3.4.1",
     "gatsby-plugin-styled-components": "^4.5.0",
     "gatsby-source-filesystem": "^3.4.0",
     "gatsby-source-wordpress": "^5.5.0",
     "gatsby-transformer-sharp": "^3.4.0",
+    "jquery": "^3.6.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-async": "^10.0.1",
+    "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-parallax": "^3.3.0",
+    "react-scripts": "^4.0.3",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
@@ -47,5 +55,8 @@
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
+  },
+  "peerDependencies": {
+    "react-spring": "^8.0.27"
   }
 }
